# ThesisMAV

./: .gitignore  README.md  read_bagfiles.py  setup.sh
src/cpp_foe/: CMakeLists.txt  package.xml
src/cpp_foe/include/: estimateFoECPP.h  foe_visualization.h  ground_truth.h  pose.h  signum.h
src/cpp_foe/include/cpp_foe/: cpp_foe.h
src/cpp_foe/launch/: foe_esim.launch  foe_live.launch  foe_live_from_rosbag.launch  foe_rosbag.launch  foe_visualization.launch  live.launch
src/cpp_foe/src/: cpp_foe.cpp  estimateFoECPP.cpp  foe_visualization.cpp  foe_visualization_node.cpp  ground_truth.cpp  pose.cpp
src/dvs_of/: CMakeLists.txt  package.xml
src/dvs_of/include/dvs_of/: calibDVS240 camera.h  calibDVS240.h  calibDVS240_222.h  calibDVS240_sim.h  calibration.h  of_server.h  settings.h
src/dvs_of/launch/: of_server.launch
src/dvs_of/src/: calibration.cpp  of_server.cpp  of_server_node.cpp
src/dvs_of_msg/: CMakeLists.txt  package.xml
src/dvs_of_msg/msg/: FlowPacketMsg.msg  VectorCount.msg
src/dvs_server/: CMakeLists.txt  dvs_server_nodelet.xml  package.xml
src/dvs_server/include/dvs_server/: server.h  server_nodelet.h
src/dvs_server/launch/: davis_server_test.launch
src/dvs_server/src/: server.cpp  server_node.cpp  server_nodelet.cpp
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/include/: CollisionCheck.h  EstimateClusterTTC.h  controller.hpp  postEstimateClustersCPP.h  prepEstimateClustersCPP.h
src/object_detection/include/object_detection/: object_detection.h
src/object_detection/src/: CollisionCheck.cpp  EstimateClusterTTC.cpp  controller.cpp  object_detection.cpp  prepEstimateClustersCPP.cpp
src/vec_intersect/: CMakeLists.txt  package.xml
src/vec_intersect/include/vec_intersect/: vec_intersect.h
src/vec_intersect/launch/: foe_esim.launch  foe_live.launch  foe_rosbag.launch
src/vec_intersect/msg/: FoE.msg
src/vec_intersect/src/: signum.cpp  vec_intersect.cpp
utils/: CreateUndistortionPlot.m  CropOptitrack.py  DataReader.m  DerotationCheck2.asv  DerotationCheck2.m  DownwardTrajectoryGenerator_random.m  ErrorVersusAnglePlot.asv  ErrorVersusAnglePlot.m  ForwardOptiTrackFoE.m  ForwardTrajectoryGenerator.asv  ForwardTrajectoryGenerator.m  ForwardTrajectoryGenerator_random.m  FreqChange.py  GetAllFolders.m  GlobalFlow.asv  GlobalFlow.m  OptiTrackFoE.m  PerformancePlot.asv  PerformancePlot.m  PlotErrorViolins.m  RandomNumber.m  SimPlotter.asv  SimPlotter.m  SimPlotterPixels.m  TestDerotation.m  TestFlow.asv  TestFlow.m  TrajectoryGenerator.asv  TrajectoryGenerator.m  optitrack_2_ros.py  printMatrixAsCArray.m  testingoptitrack.m  utils.py
